-> Prevent wrapping of table names in BQ table display -> Some table names weren't splitting off the project and dataset; those have been removed

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -25,6 +25,7 @@
       li
         text-overflow: ellipsis
         overflow: hidden
+        white-space: nowrap
       float: right
       width: 40%
       overflow-y: scroll
